# rust-python-pyo3

./: Cargo.toml  README.md  pyproject.toml  rust_python_fib.pyi
.github/workflows/: lint.yml  typecheck.yml
python/: benchmark.py
src/: lib.rs
